extras/cd/argo/argo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  name: argocd-server-grpc-ingress
  namespace: argo-cd
spec:
  rules:
    - host: argogrpc.YOURDOMIAN.com
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
  name: argocd-server-http-ingress
  namespace: argo-cd
spec:
  rules:
    - host: argo.YOURDOMIAN.com
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
